.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:10:05 **** Incremental Build of configuration Debug for project LinuxGCC_Tests ****
make all 
Building file: ../test_debounce.cpp
Invoking: GCC C++ Compiler
g++ -I"/home/chris/DSPGuitarPedalF405/Host_CppUTest/CppUTestInc" -I/home/chris/CMSIS_5.7.0_Build/CMSIS/DSP/Include -I/home/chris/CMSIS_5.7.0_Build/CMSIS/Include -I"/home/chris/DSPGuitarPedalF405/F405_Main/Application/Inc" -I"/home/chris/DSPGuitarPedalF405/F405_RTT/RTT" -I"/home/chris/DSPGuitarPedalF405/F405_Main/Application/FSM" -I"/home/chris/DSPGuitarPedalF405/F405_Main/Application/Debounce" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test_debounce.d" -MT"test_debounce.o" -o "test_debounce.o" "../test_debounce.cpp"
In file included from /home/chris/DSPGuitarPedalF405/Host_CppUTest/CppUTestInc/CppUTest/TestHarness.h:40,
                 from ../test_debounce.cpp:46:
../test_debounce.cpp: In member function ‘virtual void TEST_DebounceGroup_DebounceTest_Test::testBody()’:
../test_debounce.cpp:60:28: error: expected primary-expression before ‘debounceManagerTim14_FAIL’
   60 |  CHECK(TestDebounceManager debounceManagerTim14_FAIL(NULL, 100));
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/chris/DSPGuitarPedalF405/Host_CppUTest/CppUTestInc/CppUTest/UtestMacros.h:120:46: note: in definition of macro ‘CHECK_TRUE_LOCATION’
  120 |   do { UtestShell::getCurrent()->assertTrue((condition), checkString, conditionString, text, file, line); } while(0)
      |                                              ^~~~~~~~~
../test_debounce.cpp:60:2: note: in expansion of macro ‘CHECK’
   60 |  CHECK(TestDebounceManager debounceManagerTim14_FAIL(NULL, 100));
      |  ^~~~~
../test_debounce.cpp:60:28: error: expected ‘)’ before ‘debounceManagerTim14_FAIL’
   60 |  CHECK(TestDebounceManager debounceManagerTim14_FAIL(NULL, 100));
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/chris/DSPGuitarPedalF405/Host_CppUTest/CppUTestInc/CppUTest/UtestMacros.h:120:46: note: in definition of macro ‘CHECK_TRUE_LOCATION’
  120 |   do { UtestShell::getCurrent()->assertTrue((condition), checkString, conditionString, text, file, line); } while(0)
      |                                              ^~~~~~~~~
../test_debounce.cpp:60:2: note: in expansion of macro ‘CHECK’
   60 |  CHECK(TestDebounceManager debounceManagerTim14_FAIL(NULL, 100));
      |  ^~~~~
/home/chris/DSPGuitarPedalF405/Host_CppUTest/CppUTestInc/CppUTest/UtestMacros.h:120:45: note: to match this ‘(’
  120 |   do { UtestShell::getCurrent()->assertTrue((condition), checkString, conditionString, text, file, line); } while(0)
      |                                             ^
/home/chris/DSPGuitarPedalF405/Host_CppUTest/CppUTestInc/CppUTest/UtestMacros.h:102:3: note: in expansion of macro ‘CHECK_TRUE_LOCATION’
  102 |   CHECK_TRUE_LOCATION(condition, "CHECK", #condition, NULLPTR, __FILE__, __LINE__)
      |   ^~~~~~~~~~~~~~~~~~~
../test_debounce.cpp:60:2: note: in expansion of macro ‘CHECK’
   60 |  CHECK(TestDebounceManager debounceManagerTim14_FAIL(NULL, 100));
      |  ^~~~~
make: *** [subdir.mk:29: test_debounce.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
17:14:01 **** Incremental Build of configuration Debug for project LinuxGCC_Tests ****
make all 
Building file: ../test_debounce.cpp
Invoking: GCC C++ Compiler
g++ -I"/home/chris/DSPGuitarPedalF405/Host_CppUTest/CppUTestInc" -I/home/chris/CMSIS_5.7.0_Build/CMSIS/DSP/Include -I/home/chris/CMSIS_5.7.0_Build/CMSIS/Include -I"/home/chris/DSPGuitarPedalF405/F405_Main/Application/Inc" -I"/home/chris/DSPGuitarPedalF405/F405_RTT/RTT" -I"/home/chris/DSPGuitarPedalF405/F405_Main/Application/FSM" -I"/home/chris/DSPGuitarPedalF405/F405_Main/Application/Debounce" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test_debounce.d" -MT"test_debounce.o" -o "test_debounce.o" "../test_debounce.cpp"
Finished building: ../test_debounce.cpp
 
Building target: LinuxGCC_Tests
Invoking: GCC C++ Linker
g++ -L"/home/chris/DSPGuitarPedalF405/Host_CppUTest/Debug" -o "LinuxGCC_Tests"  ./FSM/AbstractState.o ./FSM/EventMachine.o ./FSM/FxDisabledState.o ./FSM/FxEnabledState.o  ./test_blank.o ./test_debounce.o ./test_eventmachine.o ./testmain.o   -lHost_CppUTest
Finished building target: LinuxGCC_Tests
 
